src/test/ui/traits/trait-impl-1.stderr
error[E0599]: no method named `foo` found for type `&i32` in the current scope
  --> $DIR/trait-impl-1.rs:15:7
   |
LL |     x.foo();
   |       ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
